# clasificiacion_hortalizas

./: .gitignore  README.md  general_model.ipynb  makefile  model.ipynb  preprocess.ipynb  prueba.ipynb  pyproject.toml
analysis/: data_set_analysis.ipynb  eda.ipynb
manu/: estadisticas_color_por_enfermedad.csv
preprocessing/: extract_data.ipynb  generate_data_split.ipynb  mlflow-test.ipynb  preprocess.ipynb  process_data.ipynb
training/: general_model.ipynb
