[project]
name = "clasificiacion-hortalizas"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "ipykernel>=7.0.1",
    "kagglehub>=0.3.13",
    "matplotlib>=3.10.7",
    "pandas>=2.3.3",
    "pillow>=12.0.0",
    "pyarrow>=21.0.0",
    "seaborn>=0.13.2",
]
